--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ h1, h2 {
     cursor: pointer;
 }
 
+.upgrade.gp {
+	width: 50px;
+    height: 50px;
+}
+
 .upgrade.closed {
     background-color: darkred;
 }
