--- a/style.css
+++ b/style.css
@@ -112,6 +112,19 @@ h2 {
 	color: rgb(231, 30, 238);
 }
 
+.rank {
+	width: 225px;
+	height: 125px;
+	border: solid 3px white;
+}
+
+.chalGreek {
+	width: 300px;
+	height: 250px;
+	border: solid 3px white;
+	cursor: pointer;
+}
+
 .milestone_dm {
 	border: solid 3px white;
 	width: 150px;
