--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ h2 {
     cursor: pointer;
 }
 
+.upgrade:hover {
+    background:grey;	
+}
+
 .upgrade.gp {
 	width: 50px;
     height: 50px;
@@ -62,6 +66,11 @@ h2 {
 .upgrade.closed {
     background-color: darkred;
 }
+
+.upgrade.closed:hover {
+    background:#4e0000;	
+}
+
 
 .achi {
     border: solid 3px black;
